--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
   background-size: cover;
   align-items: center; 
   justify-content: center;
+  width: 100%;
 }
   #banner img {
-    width: 700px;
+    width: 100%;
     height: auto;
-    max-width: 100%;
+    max-width: none;
   }
   
   #section0, #section1, #section2, #section3, #section4 {
@@ -66,19 +67,27 @@
   }
   
   #section0 {
-    background-color: #b8b51d;
+    background-color: #cadbe7;
+    margin-top: 6px;
   }
   #section1 {
     background-color: #423711;
+    margin-top: 6px;
   }
   #section2 {
     background-color: #bbb5a7;
+    margin-top: 6px;
+
   }
     #section3 {
     background-color: #8b2e25;
+    margin-top: 6px;
+
   }
     #section4 {
     background-color: #787254;
+    margin-top: 6px;
+
   }
   
   
@@ -91,11 +100,11 @@
     <h2>Anime Appreciation Site</h2>
 		<!--Navigation links -->
   <nav>
-<a href="#section1">Story</a>
+<a href="#section0">Story</a>
 <a href="#section1">Favorite anime</a>
-<a href="#section1">Loved characters</a>
-<a href="#section1">Hated characters</a>
-<a href="#section1">Quotes</a>  
+<a href="#section2">Loved characters</a>
+<a href="#section3">Hated characters</a>
+<a href="#section4">Quotes</a>  
 	</nav>
 </div>
 
