Title added to section 0

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     background-color: #cadbe7;
     margin-top: 6px;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     height: 500px;
@@ -134,9 +135,11 @@
 
 
 <div id="section0">
+  <h1>My Story with Anime</h1>
   <div class="section-content">
   <!-- content for section 0 goes here -->
   </div>
+ 
   <div class="story-image">
     <img src="story picture.jpg" alt="image of Keyrane(me)">
   </div>
