--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   
   
   #section0 {
-    background-color: #cadbe7;
+    background-color: #cf7956;
     margin-top: 6px;
     display: flex;
     flex-direction: row;
@@ -137,6 +137,7 @@
 <div id="section0">
   <div class="section-content">
   <!-- content for section 0 goes here -->
+  <h2 style="padding:20px 30 450 20px;font-family:'Nova square';font-size:36;color: #eedac2;">My Story with Anime</h2>
   </div>
  
   <div class="story-image">
