--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <div id="section0">
   <div class="section-content">
   <!-- content for section 0 goes here -->
-  <h2 style="padding:20px 30 450 20px;font-family:'Nova square';font-size:36;color: #eedac2;">My Story with Anime</h2>
+  <h2 style="padding:20px 30px 450px 20px;font-family:'Nova square';font-size:36px;color:#eedac2;">My Story with Anime</h2>
   </div>
  
   <div class="story-image">
