--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
   #section1 {
     background-color: #cf9683;
     margin-top: 6px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    padding: 10px;
   }
     
     #section1 h2 {
@@ -121,6 +125,16 @@
       font-family: "Nova square";
       font-size: 30px;
       color: #eedac2;
+      text-align: center;
+      width: 100%;
+    }
+    .anime-card {
+      margin: 20px;
+      text-align: left;
+    }
+    .anime-card img {
+      width: 120px;
+      height: 170px;
     }
     
   #section2 {
@@ -193,6 +207,12 @@ Today, some of my life decisions are inspired by powerful quotes I remember from
   
 <div id="section1">
  <h2>Some of My Favorite Anime</h2> 
+  
+  <div class="anime-card">
+  <img src="fairy tail .png" alt="anime- fairy tail poster">
+  
+  
+  </div>
 </div>
   
   
