--- a/index.html
+++ b/index.html
@@ -210,12 +210,21 @@ Today, some of my life decisions are inspired by powerful quotes I remember from
   
   <div class="anime-card">
   <img src="fairy tail .png" alt="anime- fairy tail poster">
-  
-  
+  <p><strong>Fairy Tail</strong><br>Genre: Adventurem Fantasy</p>
   </div>
-</div>
+
+  <div class="anime-card">
+      <img src="demon slayer.jpg" alt="anime- demon slayer poster">
+      <p><strong>Demon Slayer</strong><br>Genre: Action, Demons, Historical</p>
+    </div>
   
-  
+    <div class="anime-card">
+      <img src="jjk.jpg" alt="anime-Jujutsu Kaisen poster">
+      <p><strong>Demon Slayer</strong><br>Genre: Adventure, Dark Fantasy, Supernatural</p>
+    </div>
+
+
+  </div>
   
 <div id="section2">
 Your amazing content goes here!
