line break added

--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@ Today, some of my life decisions are inspired by powerful quotes I remember from
 
   <div class="anime-card">
       <img src="demon slayer.jpg" alt="anime- demon slayer poster">
-      <p><strong>Demon Slayer</strong><br>Genre: Action, Demons, Historical</p>
+      <p><strong>Demon Slayer</strong><br>Genre: Action, Demons,<br> Historical</p>
     </div>
   
     <div class="anime-card">
       <img src="jjk.jpg" alt="anime-Jujutsu Kaisen poster">
-      <p><strong>Demon Slayer</strong><br>Genre: Adventure, Dark Fantasy, Supernatural</p>
+      <p><strong>Demon Slayer</strong><br>Genre: Adventure,<br> Dark Fantasy, Supernatural</p>
     </div>
 
 
