--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
       width: 100%;
     }
     .anime-card {
-      margin: 20px;
+      margin: 10px;
       text-align: left;
+      padding: 10px;
     }
     .anime-card img {
       width: 120px;
@@ -211,19 +212,28 @@ Today, some of my life decisions are inspired by powerful quotes I remember from
   
   <div class="anime-card">
   <img src="fairy tail .png" alt="anime- fairy tail poster">
-  <p><strong>Fairy Tail</strong><br>Genre: Adventurem Fantasy</p>
+  <p><strong>Fairy Tail</strong><br>Genre: Adventure, <br> Fantasy</p>
   </div>
 
   <div class="anime-card">
       <img src="demon slayer.jpg" alt="anime- demon slayer poster">
-      <p><strong>Demon Slayer</strong><br>Genre: Action, Demons,<br> Historical</p>
+      <p><strong>Demon Slayer</strong><br>Genre: Action,<br> Demons,<br> Historical</p>
     </div>
   
     <div class="anime-card">
       <img src="jjk.jpg" alt="anime-Jujutsu Kaisen poster">
-      <p><strong>Demon Slayer</strong><br>Genre: Adventure,<br> Dark Fantasy, Supernatural</p>
+      <p><strong>Jujutsu Kaisen</strong><br>Genre: Adventure,<br> Dark Fantasy,<br> Supernatural</p>
     </div>
-
+  
+<div class="anime-card">
+      <img src="fruit basket .jpeg" alt="anime-Fruit Basket poster">
+      <p><strong>Fruit Basket</strong><br>Genre:Animation,<br> Comedy, Drama,<br> Fantasy, Romance </p>
+    </div>
+  
+  <div class="anime-card">
+      <img src="tokyo ghoul.jpeg" alt="anime-Tokyo Ghoul poster">
+      <p><strong>Tokyo Ghoul</strong><br>Genre:Animation,<br> Comedy, Drama,<br> Fantasy, Romance </p>
+    </div>
 
   </div>
   
