space in progress

--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
     }
     .anime-card {
       margin: 10px;
-      text-align: left;
-      padding: 33px;
+      text-align: center;
+      padding-top: 8px;
+      padding-right: 80px;
     }
     .anime-card img {
       width: 120px;
