Favorite anime done

--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
     .anime-card {
       margin: 10px;
       text-align: center;
-      padding-top: 8px;
-      padding-right: 80px;
+      padding: 8px;
+      width: calc(25% - 20px);
+      box-sizing: border-box;
     }
     .anime-card img {
       width: 120px;
@@ -233,9 +234,24 @@ Today, some of my life decisions are inspired by powerful quotes I remember from
   
   <div class="anime-card">
       <img src="tokyo ghoul.jpeg" alt="anime-Tokyo Ghoul poster">
-      <p><strong>Tokyo Ghoul</strong><br>Genre:Animation,<br> Comedy, Drama,<br> Fantasy, Romance </p>
+      <p><strong>Tokyo Ghoul</strong><br>Genre:Action, <br> Horror, Supernatural <br> thriller, Psychological, Seinen </p>
     </div>
 
+   <div class="anime-card">
+      <img src="dr-stone.jpg" alt="anime-Dr. stone poster">
+      <p><strong>Dr. stone</strong><br>Genre:Adventure, <br> Comedy, Drama, <br> Science Fiction </p>
+    </div>
+  
+   <div class="anime-card">
+      <img src="kuroko no basket .jpeg" alt="anime-Kuroko no Basket poster">
+      <p><strong>Kuroko no Basket</strong><br>Genre:Animation, <br> Comedy, Sport </p>
+    </div>
+  
+   <div class="anime-card">
+      <img src="spy x family.jpeg" alt="anime-Spy X Family poster">
+      <p><strong>Spy X Family</strong><br>Genre:Action, <br> comedy, Spy, <br> Slice of life  </p>
+    </div>
+  
   </div>
   
 <div id="section2">
