--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       <h2>Characters I love</h2>
       <div class="anime-character">
         <img src="slayer.jpeg" alt="Tengen Uzui from demon slayer  ">
-        <p><strong>Tengen Uzui from Demon slayer.</strong> I personally <br> refer to him as flashy guy hahah. He has a <br> flamboyant personality and live for entertainment. <br> I love how confident and charismatic he is <br> and unafraid to show off his skills and abilities.
+        <p><strong>Tengen Uzui from Demon slayer.</strong><br> I personally refer to him as flashy guy hahah. He has a flamboyant personality and live for entertainment. I love how confident and charismatic he is and unafraid to show off his skills and abilities.
         </p>
       </div>
 
