next images added

--- a/index.html
+++ b/index.html
@@ -298,8 +298,14 @@
     <div id="section2">
       <h2>Characters I love</h2>
       <div class="anime-character">
-        <img src="slayer.jpeg" alt="Tengen Uzui from demon slayer  ">
+        <img src="slayer.jpeg" alt="Tengen Uzui from demon slayer">
         <p><strong>Tengen Uzui from Demon slayer.</strong><br> I personally refer to him as flashy guy hahah. He has a flamboyant personality and live for entertainment. I love how confident and charismatic he is and unafraid to show off his skills and abilities.
+        </p>
+      </div>
+      
+      <div class="anime-character">
+        <img src="slayer.jpeg" alt="Violet Evergarden from Violet Evergarden lol">
+        <p><strong>Violet Evergarden from Violet Evergarden lol.</strong> is such a lovely character. Since a young age, she was a mass-murdering soldier and later became one of the most famous Dolls In the amanuensis’s industry. Despite her expressionless and aloof personality, she is considerate and empathetic and always tries to help her clients no matter what. What I love most about her is her journey from being an “emotionless” tool to becoming more of an expressive person as she learns the meaning of the word “love”. 
         </p>
       </div>
 
