--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         flex-wrap: wrap;
         justify-content: flex-start;
         padding: 10px;
-        height: 990px;
+        height: 1000px;
       }
 
       #section2 h2 {
@@ -177,7 +177,7 @@
       .anime-character {
         margin: 10px;
         padding: 8px;
-        width: calc(35% - 20px);
+        width: calc(25% - 20px);
         box-sizing: border-box;
         text-align: left;
       }
@@ -304,8 +304,14 @@
       </div>
       
       <div class="anime-character">
-        <img src="slayer.jpeg" alt="Violet Evergarden from Violet Evergarden lol">
+        <img src="violet.jpeg" alt="Violet Evergarden from Violet Evergarden lol">
         <p><strong>Violet Evergarden from Violet Evergarden lol.</strong> is such a lovely character. Since a young age, she was a mass-murdering soldier and later became one of the most famous Dolls In the amanuensis’s industry. Despite her expressionless and aloof personality, she is considerate and empathetic and always tries to help her clients no matter what. What I love most about her is her journey from being an “emotionless” tool to becoming more of an expressive person as she learns the meaning of the word “love”. 
+        </p>
+      </div>
+      
+      <div class="anime-character">
+        <img src="violet.jpeg" alt="Violet Evergarden from Violet Evergarden lol">
+        <p><strong>Sasha, aka Potato Girl from Attack on Titan,</strong> is a favorite character with a friendly demeanor and an insatiable appetite. She strikes a balance between being mean and kind, caring yet seemingly heartless when it comes to food. In times of terror, she brings normalcy with humor and a love for food, standing courageously in the face of danger for the sake of her friends and, of course, food. 
         </p>
       </div>
 
