progress in section2

--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
       #section2 {
         background-color: #878f84;
         margin-top: 6px;
-        padding: 10px;
+        padding: 40px;
         text-align: center;
+        height: 1000px;
       }
 
       #section2 h2 {
@@ -178,6 +179,8 @@
         margin: 0 -10px;
         /* Adjusted to create equal spacing */
         flex-wrap: wrap;
+        margin-top: 10px;
+        margin-bottom: 20px;
       }
 
       .column {
@@ -318,21 +321,40 @@
 
   <div class="row">
     <div class="column">
-      <img src="slayer.jpeg" alt="Tengen Uzui from Demon Slayer" style="width:100%" onclick="showAnimeCharacter('Tengen Uzui from Demon slayer. I personally refer to him as flashy guy hahah. He has a flamboyant personality and lives for entertainment. I love how confident and charismatic he is and unafraid to show off his skills and abilities. A true strong leader to the main character when they go on missions');">
+      <img src="slayer.jpeg" alt="Tengen Uzui from Demon Slayer" style="width:100%" onclick="showAnimeCharacter('<strong>Tengen Uzui from Demon slayer.</strong> <br> I personally refer to him as flashy guy hahah. He has a flamboyant personality and lives for entertainment. I love how confident and charismatic he is and unafraid to show off his skills and abilities. A true strong leader to the main character when they go on missions');">
     </div>
 
     <div class="column">
-      <img src="violet.jpeg" alt="Violet Evergarden from Violet Evergarden" style="width:100%" onclick="showAnimeCharacter('Violet Evergarden from Violet Evergarden lol, is such a lovely character. Since a young age, she was a mass-murdering soldier and later became one of the most famous Dolls In the amanuensis’s industry. Despite her expressionless and aloof personality, she is considerate and empathetic and always tries to help her clients no matter what. What I love most about her is her journey from being an “emotionless” tool to becoming more of an expressive person as she learns the meaning of the word “love”.');">
+      <img src="violet.jpeg" alt="Violet Evergarden from Violet Evergarden" style="width:100%" onclick="showAnimeCharacter('<strong>Violet Evergarden from Violet Evergarden lol</strong>,<br> is such a lovely character. Since a young age, she was a mass-murdering soldier and later became one of the most famous Dolls In the amanuensis’s industry. <br> Despite her expressionless and aloof personality, she is considerate and empathetic and always tries to help her clients no matter what. <br> What I love most about her is her journey from being an “emotionless” tool to becoming more of an expressive person as she learns the meaning of the word “love”.');">
     </div>
 
     <div class="column">
-      <img src="horimiya.jpeg" alt="horimiya from horimiya" style="width:100%" onclick="showAnimeCharacter('Horimiya from Horimiya lol, is such a relatable character to my personal experience at school when first arriving in Canada. This guy is an introvert who has been judged by his cover. By simply appearing different he was outcasted. I love how he portrayed his emotions of not only being true to himself but also portrayed how lonely he felt. But slowly with the help of his girlfriend, Hiromi learns how to connect with others. He helps me realize that friends and connections are important just being isolated can be nice and cozy, but it can also become lonely to an unbearable level.');">
+      <img src="horimiya.jpeg" alt="horimiya from horimiya" style="width:100%" onclick="showAnimeCharacter('<strong>Horimiya from Horimiya lol</strong>,<br> is such a relatable character to my personal experience at school when first arriving in Canada.<br> This guy is an introvert who has been judged by his cover. By simply appearing different he was outcasted. I love how he portrayed his emotions of not only being true to himself but also portrayed how lonely he felt. But slowly with the help of his girlfriend, Hiromi learns how to connect with others. He helps me realize that friends and connections are important just being isolated can be nice and cozy, but it can also become lonely to an unbearable level.');">
+    </div>
+
+  <div class="column">
+  <img src="idol .jpeg" alt="Aquamarine Hoshino from Oshi No Ko" style="width:100%" onclick="showAnimeCharacter('<strong>Aquamarine Hoshino from Oshi No Ko </strong><br> is literally THE reason I even started watching that anime after seeing a scene of him. He’s smart and his acting talent is so amazing. <br> I love strong characters that have such a unique personality. Throughout the anime, he investigates the death of his mother in such an intense way. Aqua believes that he is a fundamentally bad person and that he does not deserve to be happy. Because of that, he dirties his hands, doing bad and shitty things that hurt the people around him because, to him, it\'s better than letting these \'good\' people who mistakenly have come to care for him dirty themselves in turn.');">
+</div>
+    
+     <!-- Second row of images -->
+    <div class="column">
+      <img src="image5.jpg" alt="Qian Yun Xi from Psychic princess (Tong Ling Fei). " style="width:100%" onclick="showAnimeCharacter('Description for Character 5');">
     </div>
 
     <div class="column">
-      <img src="idol .jpeg" alt="Aquamarine Hoshino from Oshi No Ko" style="width:100%" onclick="showAnimeCharacter('5.	Aquamarine Hoshino from Oshi No Ko is literally THE reason I even started watching that anime after seeing a scene of him. He’s smart and his acting talent is so amazing. I love strong characters that such a unique personality. Throughout the anime, he investigates the death of his mother in such an intense way. Aqua believes that he is a fundamentally bad person and that he does not deserve to be happy. Because of that, he dirties his hands, doing bad and shitty things that hurt the people around him because, to him, it's better than letting these 'good' people who mistakenly have come to care for him dirty themselves in turn. ');">
+      <img src="image6.jpg" alt="Character 6" style="width:100%" onclick="showAnimeCharacter('Description for Character 6');">
+    </div>
+
+    <div class="column">
+      <img src="image7.jpg" alt="Character 7" style="width:100%" onclick="showAnimeCharacter('Description for Character 7');">
+    </div>
+
+    <div class="column">
+      <img src="image8.jpg" alt="Character 8" style="width:100%" onclick="showAnimeCharacter('Description for Character 8');">
     </div>
   </div>
+
+
 
   <div class="container" id="animeCharacterContainer">
     <span onclick="closeAnimeCharacter()" class="closebtn">&times;</span>
