--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
 
   <div id="section2">
   <h2>Characters I love</h2>
+  <h5>Click on each image in the gallery :)</h5>
 
   <div class="row">
     <div class="column">
@@ -338,19 +339,19 @@
     
      <!-- Second row of images -->
     <div class="column">
-      <img src="image5.jpg" alt="Qian Yun Xi from Psychic princess (Tong Ling Fei). " style="width:100%" onclick="showAnimeCharacter('Description for Character 5');">
+      <img src="chineses anime .jpeg" alt="Qian Yun Xi from Psychic princess (Tong Ling Fei). " style="width:100%" onclick="showAnimeCharacter('<strong>Qian Yun Xi from Psychic princess (Tong Ling Fei).</strong><br>This anime is the only Chinese anime I know, and Qian Yun Xi is my favorite. She is very kind, strong willed and extremely funny. She come off as being an extremely innocent girl, but she is very energetic, smart, and strong. The whole show is simply hilarious to watch because of her.');">
     </div>
 
     <div class="column">
-      <img src="image6.jpg" alt="Character 6" style="width:100%" onclick="showAnimeCharacter('Description for Character 6');">
+      <img src="SashaBlouse.jpg" alt="Sasha from Attack on Titan " style="width:100%" onclick="showAnimeCharacter('<strong>Sasha also known as Potato girl from Attack on Titan</strong> <br> is one of my favorites from that anime. She is friendly and has an incredible appetite. she’s mean yet kind, caring yet heartless especially when it comes to food. All in all, a true friend. In time of terror and death, she brings normalcy to the group with either her humor or love for food. Though passionate in what she believes in, she’s scared just like anyone but as a soldier, she always stand in the face of danger for FOOD and her friends. ');">
     </div>
 
     <div class="column">
-      <img src="image7.jpg" alt="Character 7" style="width:100%" onclick="showAnimeCharacter('Description for Character 7');">
+      <img src="mikey .jpeg" alt="Mikey from Tokyo revengers" style="width:100%" onclick="showAnimeCharacter('<strong>Mikey from Tokyo revengers</strong><br> is simply blessed with unparallel charisma.  I love him because he fears no one, respect and admire himself lol. <br> He possesses immense superior strength compared to other delinquent fighters throughout the series. I also like him because he is a complicated character where people often debate whether he is good or bad.<br> This makes the show interesting to watch.');">
     </div>
 
     <div class="column">
-      <img src="image8.jpg" alt="Character 8" style="width:100%" onclick="showAnimeCharacter('Description for Character 8');">
+      <img src="lazyguy.jpeg" alt="Oreki Houtarou from classic literature club." style="width:100%" onclick="showAnimeCharacter('<strong>Oreki Houtarou from classic literature club.</strong> <br> This character is humble and incredibly smart however he doesn’t brag about his ability, I like that. I find it interesting the way he solves mystery and the way he simply lives his life without really following the typically high school norms of the world he lives in.');">
     </div>
   </div>
 
