--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
     <div id="section2">
       <h2>Characters I love</h2>
-      <h5>Click on each image in the gallery :)</h5>
+      <h5>Click on each image in the gallery to learn more about why I love them :)</h5>
 
       <div class="row">
         <div class="column">
