--- a/index.html
+++ b/index.html
@@ -464,7 +464,11 @@
 
 
     <div id="section4">
-      Your amazing content goes here!
+      <h2>Author Note</h2>
+      
+      <img src="your-animated.gif" alt="Animated GIF" style="width: 498px; height: 280px;">
+      <p>Your amazing animated content description goes here!</p>
     </div>
+    
   </body>
 </html>
