--- a/index.html
+++ b/index.html
@@ -247,9 +247,18 @@
 
 
       #section4 {
-        background-color: #787254;
+        background-color: #eedac2;
         margin-top: 6px;
 
+      }
+
+      #section4 h2 {
+        box-sizing: border-box;
+        padding: 20px 30px 20px 20px;
+        font-family: "Nova square";
+        font-size: 30px;
+        color: #d16644;
+        text-align: left;
       }
     </style>
   </head>
@@ -465,10 +474,10 @@
 
     <div id="section4">
       <h2>Author Note</h2>
-      
+
       <img src="your-animated.gif" alt="Animated GIF" style="width: 498px; height: 280px;">
       <p>Your amazing animated content description goes here!</p>
     </div>
-    
+
   </body>
 </html>
