--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     <div id="section4">
       <h2>Author Note</h2>
 
-      <img src="your-animated.gif" alt="Animated GIF" style="width: 498px; height: 280px;">
+      <img src="gojo.gif" alt="Animated GIF" style="width: 498px; height: 280px;">
       <p>Your amazing animated content description goes here!</p>
     </div>
 
