--- a/index.html
+++ b/index.html
@@ -247,9 +247,11 @@
 
 
       #section4 {
-        background-color: #eedac2;
+        background-color: #85456b;
         margin-top: 6px;
-
+        text-align: center;
+        /* Center align the content in the section */
+        padding: 20px;
       }
 
       #section4 h2 {
@@ -257,8 +259,15 @@
         padding: 20px 30px 20px 20px;
         font-family: "Nova square";
         font-size: 30px;
-        color: #d16644;
-        text-align: left;
+        color: #eedac2;
+        text-align: center;
+        /* Center align the heading */
+      }
+
+      #section4 img {
+        display: block;
+        margin: 0 auto;
+        /* Center align the image */
       }
     </style>
   </head>
@@ -475,7 +484,7 @@
     <div id="section4">
       <h2>Author Note</h2>
 
-      <img src="gojo.gif" alt="Animated GIF" style="width: 498px; height: 280px;">
+      <img src="gojo.gif" alt="Animated GIF">
       <p>Your amazing animated content description goes here!</p>
     </div>
 
