section4on the go

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
         text-align: center;
         /* Center align the content in the section */
         padding: 20px;
+        height: 900px;
       }
 
       #section4 h2 {
