--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         text-align: center;
         /* Center align the content in the section */
         padding: 20px;
-        height: 900px;
+        height: 700px;
       }
 
       #section4 h2 {
@@ -542,6 +542,8 @@
       <p>For anime recommendations, you can reach me at my email:<br>
         <a href="mailto:kokouame@uwaterloo.ca" target="_blank">kokouame@uwaterloo.ca</a>
       </p>
+
+      <p>Thank you!</p>
     </div>
 
 
