links style added

--- a/index.html
+++ b/index.html
@@ -292,6 +292,23 @@
       #section4 td {
         background-color: #878f84;
       }
+
+      #section4 a:link {
+        color: #eedac2;
+        text-decoration: none;
+      }
+
+      #section4 a:visited {
+        color: #eedac2;
+      }
+
+      #section4 a:hover {
+        color: #cf9683;
+      }
+
+      #section4 a:active {
+        color: #d16644;
+      }
     </style>
   </head>
   <body>
