--- a/index.html
+++ b/index.html
@@ -299,15 +299,15 @@
       }
 
       #section4 a:visited {
-        color: #eedac2;
+        color: #d16644;
       }
 
       #section4 a:hover {
-        color: #cf9683;
+        color: #f8bfc4;
       }
 
       #section4 a:active {
-        color: #d16644;
+        color: #b97898;
       }
     </style>
   </head>
