--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         <a href="#section1">Favorite anime</a>
         <a href="#section2">Loved characters</a>
         <a href="#section3">Hated characters</a>
-        <a href="#section4">Quotes</a>
+        <a href="#section4">Author notes</a>
       </nav>
     </div>
 
